<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    <Button 
        android:id="@+id/Galeria"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Galeria"/>
    
    <Button 
        android:id="@+id/Mapa"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Mapa"/>
    
    <Button 
        android:id="@+id/AR"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/AR"/>
    
    <Button 
        android:id="@+id/Camara"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Camara"/>
   <LinearLayout 
       android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal">
    
        <Button
        android:id="@+id/Home"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Home"
        android:background="#008000"       
        />

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#008000"
        android:text="@string/Back" />
    
       
       
   </LinearLayout> 
   
    </LinearLayout>
